# speech-to-text

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: docs.yaml  sync_hf_space.yaml
demo/: Dockerfile  README.md  reboot_hf_space.py
docs/: future-features-contributions.md  index.md
